Estudos de mixin

--- a/Aula02/index.html
+++ b/Aula02/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
   
-  <button class="btn btn-laranja"> 
+  <button class="btn-laranja"> 
+    Buttom
+  </button>
+  
+  <button class="btn-roxo"> 
+    Buttom
+  </button>
+  
+  <button class="btn-amarelo"> 
     Buttom
   </button>
 
