--- a/Aula02/index.html
+++ b/Aula02/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
   
-  <button class="btn-laranja"> 
+  <button class="btn btn-laranja"> 
     Buttom
   </button>
   
-  <button class="btn-roxo"> 
+  <button class="btn btn-roxo"> 
     Buttom
   </button>
   
-  <button class="btn-amarelo"> 
+  <button class="btn btn-amarelo"> 
     Buttom
   </button>
 
